# conception-orientee-objet

./: .pre-commit-config.yaml  CMakeLists.txt  Config.cmake.in  README.md
.github/workflows/: tests.yml
conception_orientee_objet/: CMakeLists.txt  __init__.py  binary_module.cpp
include/conception-orientee-objet/: example-adder.hpp
python/: CMakeLists.txt  conception_orientee_objet.cpp
src/: adder.cpp  example-adder.cpp
tests/: CMakeLists.txt  test-add.cpp  test_add.py  test_doctests.py
tests/multiply/: CMakeLists.txt  multiplier.cpp
